[package]
name = "redstone-sol"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "redstone_sol"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
dev = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
redstone = { git = "https://github.com/redstone-finance/rust-sdk", branch = "jk-solana", features = ["pure", "crypto_solana"] }

[dev-dependencies]
rand = { version = "0.8.4", features = ["std"] }
